fixed UI top highlights don't get cut off

--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -2,8 +2,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  margin: 0;
 }
 .note-card:hover {
   background-color: black;
